# UrjaKavach

./: .env.example  .gitignore  ARCHITECTURE.md  BUILD_LOG.md  DEPLOYMENT_PLAYBOOK.md  DEPLOYMENT_PLAYBOOK_PLAN_A.md  Energy_Supply_Chain_Resilience_FINAL_ALIGNED_DOSSIER.md  HANDOFF.md  LICENSE  README.md  UrjaKavach_Agent_Execution_Rules.md  UrjaKavach_Architecture_Plan.md  UrjaKavach_Execution_Plan (1).md  UrjaKavach_HLD_LLD.md  docker-compose.yml  run_local.bat  update_render.bat
api/: Dockerfile  clear_stale_alerts.py  pyproject.toml
api/alembic/: env.py
api/alembic/versions/: 0001_foundation_schema.py  0002_phase2_ingestion_staging.py  0003_phase2_stale_flags.py  0004_single_column_indices.py  0005_add_security_audit_logs.py  0006_add_geopolitical_alerts.py  (+1 more)
api/app/: check_summary.py  logging_config.py  main.py  scheduler.py  seed.py  trigger_polls.py
api/app/db/: models.py  session.py
api/tests/: calculate_all_corridors.py  conftest.py  e2e_smoke_test.py  generate_alerts.py  generate_live_data.py  print_latest_scores.py  reseed_network.py  run_csv_injection_adv.py  run_mutation_tests.py  run_stress_test.py  simulate_ais_bug.py  simulate_ofac_bug.py  test_ais_and_repository.py  test_alerts.py  test_audit.py  test_integration_alerts_audit.py  test_model_health.py  test_narrative.py  test_procurement.py  test_propagation.py  test_rag.py  test_reserve.py  test_risk_score.py  test_scenario.py  test_scheduler.py  test_twin_routes.py  trigger_polls.py  verify_ais_stale.py  verify_gdelt_queries.py
api/urja_kavach_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
(+75 files in other folders)
