[project]
name = "urja-kavach-api"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.13.2",
  "asyncpg>=0.29.0",
  "fastapi>=0.111.0",
  "pydantic>=2.8.0",
  "sqlalchemy>=2.0.31",
  "uvicorn[standard]>=0.30.1"
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
