[project]
name = "urja-kavach-api"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.13.2",
  "apscheduler>=3.10.4",
  "asyncpg>=0.29.0",
  "fastapi>=0.111.0",
  "httpx>=0.27.0",
  "pydantic>=2.8.0",
  "sqlalchemy>=2.0.31",
  "uvicorn[standard]>=0.30.1",
  "websockets>=13.0",
  "networkx>=3.3",
  "pytest>=8.0",
  "sentry-sdk[fastapi]>=2.0.0",
  "pytest-cov>=4.0.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
exclude = ["tests*"]
